--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Hangman_game.App"
+﻿<Application x:Class="Simple_games.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Hangman_game"
+             xmlns:local="clr-namespace:Simple_games"
              StartupUri="MainMenuWindow.xaml">
     <Application.Resources>
          
