--- a/GameOverWindow.xaml
+++ b/GameOverWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Hangman_game.GameOverWindow"
+﻿<Window x:Class="Simple_games.GameOverWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hangman_game"
+        xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
         Title="Game Over" Background="#FFF7FFA5" Height="336" Width="473.667">
     <Grid>
