--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="Hangman_game.MainMenuWindow"
+﻿<Window x:Class="Simple_games.MainMenuWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hangman_game"
+        xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
         Title="MainMenu" Height="330.25" Width="587.631" Background="#FFADD640">
-    <StackPanel>
-        <TextBlock TextWrapping="Wrap" Text="Hangman game" Height="140" FontSize="72" TextAlignment="Center"/>
-        <Button x:Name="PlayButton" Content="Play" Height="93" HorizontalAlignment="Center" VerticalAlignment="Center" Width="220" FontSize="48" Click="Button_Click"/>
-    </StackPanel>
+    <Grid>
+        <TextBlock TextWrapping="Wrap" Text="Simple games" FontSize="72" TextAlignment="Center" Margin="0,0,0,159"/>
+        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" RenderTransformOrigin="0.5,0.5"/>
+        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" Margin="205,171,205,86"/>
+        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="Button_Click" HorizontalAlignment="Center" Margin="0,0,0,29" Width="48"/>
+    </Grid>
 </Window>
