--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Hangman_game.MainWindow"
+﻿<Window x:Class="Simple_games.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Hangman_game"
+        xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
         Title="Hangman game" Background="#FFD2DC70" MinWidth="800" MinHeight="450" Width="800" Height="450">
     <Canvas Margin="0,0,2,0">
