--- a/HangmanGameWindow.xaml
+++ b/HangmanGameWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Simple_games.MainWindow"
+﻿<Window x:Class="Simple_games.HangmanGameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
