--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -5,11 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="MainMenu" Height="330.25" Width="587.631" Background="#FFADD640">
+        Title="Simple games" Height="330.25" Width="587.631" Background="#FFADD640">
     <Grid>
-        <TextBlock TextWrapping="Wrap" Text="Simple games" FontSize="72" TextAlignment="Center" Margin="0,0,0,159"/>
-        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" RenderTransformOrigin="0.5,0.5"/>
-        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" Margin="205,171,205,86"/>
-        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="Button_Click" HorizontalAlignment="Center" Margin="0,0,0,29" Width="48"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="39*"/>
+            <ColumnDefinition Width="251*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock TextWrapping="Wrap" Text="Simple games" FontSize="72" TextAlignment="Center" Margin="0,0,0,159" Grid.ColumnSpan="2"/>
+        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Margin="126.609,128,205,129"/>
+        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="Button_Click" Margin="126.609,171,205,86" Grid.Column="1"/>
+        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="Button_Click" HorizontalAlignment="Center" Margin="187.609,0,266,29" Width="48" Grid.Column="1"/>
     </Grid>
 </Window>
