Some changes and additions Added TicTacToe window. Changed default windows' position to the screen center.

--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Simple games" Height="330.25" Width="587.631" Background="#FFADD640">
+        Title="Simple games" Height="330.25" Width="587.631" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="39*"/>
