--- a/HangmanGameWindow.xaml
+++ b/HangmanGameWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Hangman game" Background="#FFD2DC70" MinWidth="800" MinHeight="450" Width="800" Height="450">
+        Title="Hangman game" Background="#FFD2DC70" MinWidth="800" MinHeight="450" Width="800" Height="450" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Canvas Margin="0,0,2,0">
 
         <StackPanel Height="399" VerticalAlignment="Top" Width="398" Canvas.Left="360" Canvas.Top="10">
