--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -5,15 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Simple games" Height="330.25" Width="587.631" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="39*"/>
-            <ColumnDefinition Width="251*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock TextWrapping="Wrap" Text="Simple games" FontSize="72" TextAlignment="Center" Margin="0,0,0,159" Grid.ColumnSpan="2"/>
-        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="HangmanGameButton_Click" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Margin="126.609,128,205,129"/>
-        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="TicTacToeButton_Click" Margin="126.609,171,205,86" Grid.Column="1"/>
-        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="QuitButton_Click" HorizontalAlignment="Center" Margin="187.609,0,266,29" Width="48" Grid.Column="1"/>
-    </Grid>
+        Title="Simple games" Height="330" Width="250" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <StackPanel Margin="10">
+        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Simple games" FontSize="60" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="50" Margin="0,10,0,10"/>
+        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="HangmanGameButton_Click" RenderTransformOrigin="0.5,0.5" Margin="0,10,0,1"/>
+        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="TicTacToeButton_Click" Margin="0,1,0,5"/>
+        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="QuitButton_Click" Width="70" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+    </StackPanel>
 </Window>
