--- a/TicTacToeWindow.xaml
+++ b/TicTacToeWindow.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Tic Tac Toe" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Tic Tac Toe" Height="800" Width="800" WindowStartupLocation="CenterScreen" Background="#FF292525">
     <Grid>
-        <UniformGrid x:Name="BoardGrid" HorizontalAlignment="Center" Height="300" Margin="0" VerticalAlignment="Center" Width="300" Rows="3" Columns="3">
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
-            <Button FontSize="72" FontWeight="Bold" Click="BoardButton_Click"/>
+        <UniformGrid x:Name="BoardGrid" HorizontalAlignment="Center" Height="600" Margin="0" VerticalAlignment="Center" Width="600" Rows="3" Columns="3">
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" FontWeight="Bold" Click="BoardButton_Click" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button FontSize="130" Click="BoardButton_Click" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         </UniformGrid>
 
     </Grid>
