--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -5,11 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Simple games" Height="400" Width="300" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <StackPanel Margin="10">
-        <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Simple games" FontSize="60" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" LineHeight="50" Margin="0,10,0,10"/>
-        <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="HangmanGameButton_Click" RenderTransformOrigin="0.5,0.5" Margin="0,10,0,1"/>
-        <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="TicTacToeButton_Click" Margin="0,1,0,5"/>
-        <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="QuitButton_Click" Width="70" HorizontalAlignment="Center" Margin="0,5,0,0"/>
-    </StackPanel>
+        Title="Simple games" Width="400" Height="600" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Viewbox RenderTransformOrigin="0.5,0.5" Stretch="Fill">
+        <StackPanel Margin="10">
+            <TextBlock VerticalAlignment="Center" LineHeight="60" HorizontalAlignment="Center" TextWrapping="Wrap" FontSize="60" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" Margin="0,10,0,20" RenderTransformOrigin="0.5,0.5"><Run Text="Simple"/><LineBreak/><Run Text="games"/></TextBlock>
+            <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="HangmanGameButton_Click" RenderTransformOrigin="0.5,0.5" Margin="0,10,0,2"/>
+            <Button x:Name="TicTacToeButton" Content="Tic Tac Toe" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="TicTacToeButton_Click" Margin="0,2,0,5" RenderTransformOrigin="0.5,0.5"/>
+            <Button x:Name="QuitButton" Content="Quit" Height="42" VerticalAlignment="Bottom" FontSize="22" Click="QuitButton_Click" Width="70" HorizontalAlignment="Center" Margin="0,5,0,0" RenderTransformOrigin="0.5,0.5"/>
+        </StackPanel>
+    </Viewbox>
 </Window>
