--- a/HangmanGameWindow.xaml
+++ b/HangmanGameWindow.xaml
@@ -22,7 +22,7 @@
 
             <StackPanel Orientation="Horizontal" Margin="0,5,0,5" HorizontalAlignment="Stretch">
                 <TextBlock Text="Misses" TextWrapping="Wrap" FontSize="48" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5,10,5,10"/>
-                <TextBlock x:Name="MissesTextBlock" TextWrapping="Wrap" FontSize="48" VerticalAlignment="Center" TextDecorations="Strikethrough" Margin="5,10,5,10"/>
+                <TextBlock x:Name="missesTextBlock" TextWrapping="Wrap" FontSize="48" VerticalAlignment="Center" TextDecorations="Strikethrough" Margin="5,10,5,10"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,5,0,5" HorizontalAlignment="Stretch">
