--- a/GameOverWindow.xaml
+++ b/GameOverWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Game Over" Background="#FFE4E404" Height="336" Width="475" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Viewbox Stretch="Uniform">
+        Title="Game Over" Background="#FFE4E404" Height="336" Width="475" WindowStartupLocation="CenterScreen">
+    <Viewbox>
         <StackPanel Margin="10">
             <TextBlock x:Name="EndTextBlock" HorizontalAlignment="Center" Height="100" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="72" TextAlignment="Center" Margin="0,5,0,5"/>
             <Button IsDefault="True" Click="RestartButton_Click" FontSize="36" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Content="Restart" Margin="0,5,0,5"/>
