--- a/MainMenuWindow.xaml
+++ b/MainMenuWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Simple_games"
         mc:Ignorable="d"
-        Title="Simple games" Width="400" Height="600" Background="#FFADD640" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Viewbox RenderTransformOrigin="0.5,0.5" Stretch="Fill">
+        Title="Simple games" Width="400" Height="600" Background="#FFADD640" WindowStartupLocation="CenterScreen">
+    <Viewbox>
         <StackPanel Margin="10">
             <TextBlock VerticalAlignment="Center" LineHeight="60" HorizontalAlignment="Center" TextWrapping="Wrap" FontSize="60" TextAlignment="Center" LineStackingStrategy="BlockLineHeight" Margin="0,10,0,20" RenderTransformOrigin="0.5,0.5"><Run Text="Simple"/><LineBreak/><Run Text="games"/></TextBlock>
             <Button x:Name="HangmanGameButton" Content="Hangman game" Height="42" HorizontalAlignment="Center" VerticalAlignment="Center" Width="170" FontSize="22" Click="HangmanGameButton_Click" RenderTransformOrigin="0.5,0.5" Margin="0,10,0,2"/>
